<resources>
    <string name="app_name">Calculator</string>
    <string name="simple">Prosty</string>
    <string name="complex">Zlozony</string>
    <string name="close">ZAMKNIJ</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="C">C</string>
    <string name="plus_minus">+/-</string>
    <string name="percent">%</string>
    <string name="slash">/</string>
    <string name="xpowery">x^y</string>
    <string name="logxy">logxy</string>
    <string name="ln">ln</string>
    <string name="u221A">\u221A</string>
    <string name="xpower2">x^2</string>

</resources>
